PRL-5006 - Added manage doc changes for Bulk scan